--- a/index.html
+++ b/index.html
@@ -548,19 +548,20 @@
                 placeholder="E-mail"
                 class="bottombar-email"
               />
-              <button type="submit" class="bottombar-button">
-                Subscribe                
-                  <svg class="bottombar-button-picture" width="24" height="20">
-                    <use href="./images/icons.svg#icon-icon-send"></use>
-                  </svg>                
-              </button>
             </label>
+            <button type="submit" class="bottombar-button">
+              Subscribe
+              <svg class="bottombar-button-picture" width="24" height="24">
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
 
     <!-- backdrop -->
+
     <div class="backdrop">
       <div class="input-menu">
         <button type="button" class="exit-button">
@@ -575,7 +576,12 @@
           <div class="input-list-item">
             <label for="user-name" class="label-text">Name</label>
             <div class="input-wrapper">
-              <input type="text" name="user-name" id="user-name" class="input-box" />
+              <input
+                type="text"
+                name="user-name"
+                id="user-name"
+                class="input-box"
+              />
               <svg class="input-menu-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
@@ -608,16 +614,20 @@
               class="input-menu-textarea"
             ></textarea>
           </div>
-          <div class="input-list-item input-checkbox">
+          <div class="input-checkbox">
             <input
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
               value="true"
+              class="invisibility-box"
             />
             <label for="user-privacy" class="label-privacy-policy">
+              <span class="privacy-policy-span">
+                <svg class="privacy-policy-svg" width="10" height="8"></svg>
+              </span>
               I accept the terms and conditions of the
-              <a href="" class="input-menu-site">Privacy Policy</a>
+              <span>Privacy Policy</span>
             </label>
           </div>
           <div class="input-list-item">
