--- a/index.html
+++ b/index.html
@@ -620,19 +620,19 @@
               name="user-privacy"
               id="user-privacy"
               value="true"
-              class="invisibility-box"
+              class="invisibility-box visually-hidden"
             />
             <label for="user-privacy" class="label-privacy-policy">
               <span class="privacy-policy-span">
-                <svg class="privacy-policy-svg" width="10" height="8"></svg>
+                <svg class="privacy-policy-svg" width="10" height="8">
+                  <use href="./images/icons.svg#" icon-Checkbox></use>
+                </svg>
               </span>
               I accept the terms and conditions of the
-              <span>Privacy Policy</span>
+              <a href="" class="input-menu-site">Privacy Policy</a>
             </label>
           </div>
-          <div class="input-list-item">
-            <button type="submit" class="input-menu-button-send">Send</button>
-          </div>
+          <button type="submit" class="input-menu-button-send">Send</button>
         </form>
       </div>
     </div>
