--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
             <label for="user-privacy" class="label-privacy-policy">
               <span class="privacy-policy-span">
                 <svg class="privacy-policy-svg" width="10" height="8">
-                  <use href="./images/icons.svg#" icon-Checkbox></use>
+                  <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
