--- a/index.html
+++ b/index.html
@@ -24,15 +24,10 @@
     <header class="header-wrap">
       <div class="container container-header">
         <nav class="nav-wrap">
-          <a class="logo" href="./index.html"
+          <a class="logo header-logo" href="./index.html"
             >Web<span class="logo-black">Studio</span></a
           >
-          <button type="button" class="header-button">
-            <svg class="header-button-svg" width="16.8" height="14.4">
-              <use href="./images/icons.svg#icon-Group"></use>
-            </svg>
-          </button>
-          <ul class="navbar-list visually-hidden">
+          <ul class="navbar-list">
             <li class="navbar-iteam">
               <a class="navbar active" href="./index.html">Studio</a>
             </li>
@@ -42,7 +37,7 @@
             <li class="navbar-iteam"><a class="navbar" href="">Contacts</a></li>
           </ul>
         </nav>
-        <address class="my-address visually-hidden">
+        <address class="my-address">
           <ul class="my-info-list">
             <li>
               <a class="my-info" href="mailto:info@devstudio.com"
@@ -56,6 +51,106 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="header-button" data-modal-open-mobile>
+          <svg class="header-button-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-heroicons-solid_menu"></use>
+          </svg>
+        </button>
+      </div>
+
+      <!-- ------------------mobile-menu------------------------------ -->
+
+      <div class="mobile-menu" data-modal-mobile>
+        <div class="container mobile-menu-container">
+          <button
+            type="button"
+            class="mobile-exit-button"
+            data-modal-close-mobile
+          >
+            <svg class="mobile-exit-button-svg" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-black"></use>
+            </svg>
+          </button>
+          <nav class="mobile-nav-wrap">
+            <ul class="mobile-navbar-list">
+              <li class="mobile-navbar-iteam">
+                <a class="mobile-navbar active-navbar" href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-navbar-iteam">
+                <a class="mobile-navbar" href="">Portfolio</a>
+              </li>
+              <li class="mobile-navbar-iteam">
+                <a class="mobile-navbar" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-my-address">
+            <ul class="mobile-my-info-list">
+              <li>
+                <a
+                  class="mobile-my-info active-my-info"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="mobile-my-info" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <div class="mobile-social-link">
+            <ul class="sothial-menu-mobile">
+              <li class="sothial-items-mobile">
+                <a
+                  href="https://www.instagram.com/"
+                  target="_blank"
+                  class="sothial-items-href-mobile"
+                >
+                  <svg class="sothial-items-picture" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sothial-items-mobile">
+                <a
+                  href="https://www.twitter.com/"
+                  target="_blank"
+                  class="sothial-items-href-mobile"
+                >
+                  <svg class="sothial-items-picture" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sothial-items-mobile">
+                <a
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  class="sothial-items-href-mobile"
+                >
+                  <svg class="sothial-items-picture" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sothial-items-mobile">
+                <a
+                  href="https://ua.linkedin.com/"
+                  target="_blank"
+                  class="sothial-items-href-mobile"
+                >
+                  <svg class="sothial-items-picture" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -629,10 +724,10 @@
                   <use href="./images/icons.svg#icon-Vector"></use>
                 </svg>
               </span>
-              <div class="privacy-policy-text">
+              <span class="privacy-policy-text">
                 I accept the terms and conditions of the
                 <a href="" class="input-menu-site">Privacy Policy</a>
-              </div>
+              </span>
             </label>
           </div>
           <button type="submit" class="input-menu-button-send">Send</button>
