--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </li>
             <li class="team-page">
               <img
-                srccet="./images/camila-garcia.jpg 1x, ./images/camila-garcia-2x.jpg 2x"
+                srcset="./images/camila-garcia.jpg 1x, ./images/camila-garcia-2x.jpg 2x"
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
