--- a/index.html
+++ b/index.html
@@ -57,101 +57,6 @@
           </svg>
         </button>
       </div>
-
-      <!-- ------------------mobile-menu------------------------------ -->
-
-      <div class="mobile-menu" data-modal-mobile>
-        <div class="container mobile-menu-container">
-          <button
-            type="button"
-            class="mobile-exit-button"
-            data-modal-close-mobile
-          >
-            <svg class="mobile-exit-button-svg" width="8" height="8">
-              <use href="./images/icons.svg#icon-close-black"></use>
-            </svg>
-          </button>
-          <nav class="mobile-nav-wrap">
-            <ul class="mobile-navbar-list">
-              <li class="mobile-navbar-iteam">
-                <a class="mobile-navbar active-navbar" href="./index.html"
-                  >Studio</a
-                >
-              </li>
-              <li class="mobile-navbar-iteam">
-                <a class="mobile-navbar" href="">Portfolio</a>
-              </li>
-              <li class="mobile-navbar-iteam">
-                <a class="mobile-navbar" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="mobile-my-address">
-            <ul class="mobile-my-info-list">
-              <li>
-                <a
-                  class="mobile-my-info active-my-info"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="mobile-my-info" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-          <div class="mobile-social-link">
-            <ul class="sothial-menu-mobile">
-              <li class="sothial-items-mobile">
-                <a
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  class="sothial-items-href-mobile"
-                >
-                  <svg class="sothial-items-picture" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sothial-items-mobile">
-                <a
-                  href="https://www.twitter.com/"
-                  target="_blank"
-                  class="sothial-items-href-mobile"
-                >
-                  <svg class="sothial-items-picture" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sothial-items-mobile">
-                <a
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  class="sothial-items-href-mobile"
-                >
-                  <svg class="sothial-items-picture" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="sothial-items-mobile">
-                <a
-                  href="https://ua.linkedin.com/"
-                  target="_blank"
-                  class="sothial-items-href-mobile"
-                >
-                  <svg class="sothial-items-picture" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
     </header>
 
     <main>
@@ -345,7 +250,10 @@
             </li>
             <li class="team-page">
               <img
-                srcset="./images/camila-garcia.jpg 1x, ./images/camila-garcia-2x.jpg 2x"
+                srcset="
+                  ./images/camila-garcia.jpg    1x,
+                  ./images/camila-garcia-2x.jpg 2x
+                "
                 src="./images/camila-garcia.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -808,7 +716,98 @@
       </div>
     </footer>
 
-    <!-- backdrop -->
+    <div class="mobile-menu" data-modal-mobile>
+      <div class="container mobile-menu-container">
+        <button
+          type="button"
+          class="mobile-exit-button"
+          data-modal-close-mobile
+        >
+          <svg class="mobile-exit-button-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <nav class="mobile-nav-wrap">
+          <ul class="mobile-navbar-list">
+            <li class="mobile-navbar-iteam">
+              <a class="mobile-navbar active-navbar" href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li class="mobile-navbar-iteam">
+              <a class="mobile-navbar" href="">Portfolio</a>
+            </li>
+            <li class="mobile-navbar-iteam">
+              <a class="mobile-navbar" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="mobile-my-address">
+          <ul class="mobile-my-info-list">
+            <li>
+              <a
+                class="mobile-my-info active-my-info"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="mobile-my-info" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <div class="mobile-social-link">
+          <ul class="sothial-menu-mobile">
+            <li class="sothial-items-mobile">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="sothial-items-href-mobile"
+              >
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sothial-items-mobile">
+              <a
+                href="https://www.twitter.com/"
+                target="_blank"
+                class="sothial-items-href-mobile"
+              >
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sothial-items-mobile">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="sothial-items-href-mobile"
+              >
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sothial-items-mobile">
+              <a
+                href="https://ua.linkedin.com/"
+                target="_blank"
+                class="sothial-items-href-mobile"
+              >
+                <svg class="sothial-items-picture" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <div class="backdrop" data-modal>
       <div class="maodal">
